frontend/test/should_fail/index_pattern_edge_fromto_argument_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{ascending(Ei >= 42.0, Ei <= 44)}->;
	
	modify {
	}
}
